Added the scss-syntax and polyglot plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule "link/editorconfig-vim"]
 	path = link/editorconfig-vim
 	url = https://github.com/editorconfig/editorconfig-vim.git
+[submodule "link/vim-polyglot"]
+	path = link/vim-polyglot
+	url = https://github.com/sheerun/vim-polyglot.git
+[submodule "link/scss-syntax.vim"]
+	path = link/scss-syntax.vim
+	url = https://github.com/cakebaker/scss-syntax.vim
